apps/injonge/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: injonge
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    name: http
  selector:
    app: backend
