apps/injonge/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: injonge
  annotations:
    klipper.cattle.io/static-port: "6000"
spec:
  type: LoadBalancer
  ports:
  - port: 6000
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: frontend
